--- a/series.conf
+++ b/series.conf
@@ -50524,6 +50524,7 @@
 	patches.suse/x86-microcode-AMD-Have-__apply_microcode_amd-return-bool.patch
 	patches.suse/x86-cpu-Introduce-new-microcode-matching-helper.patch
 	patches.suse/x86-cpu-Expose-only-stepping-min-max-interface.patch
+	patches.suse/x86-cpu-Replace-PEBS-use-of-x86_cpu_desc-use-with-x86_cpu_.patch
 	patches.suse/x86-amd_nb-Restrict-init-function-to-AMD-based-systems.patch
 	patches.suse/x86-amd_nb-Clean-up-early_is_amd_nb.patch
 	patches.suse/x86-Start-moving-AMD-node-functionality-out-of-AMD_NB.patch
