--- a/series.conf
+++ b/series.conf
@@ -34216,6 +34216,7 @@
 	patches.suse/x86-boot-Ignore-relocations-in-.notes-sections-in-walk_rel.patch
 	patches.suse/x86-purgatory-Switch-to-the-position-independent-small-cod.patch
 	patches.suse/x86-fred-Fix-typo-in-Kconfig-description.patch
+	patches.suse/x86-CPU-AMD-Improve-the-erratum-1386-workaround.patch
 	patches.suse/x86-cpu-vfm-Add-initialize-x86_vfm-field-to-struct-cpuinfo.patch
 	patches.suse/x86-cpu-vfm-Add-new-macros-to-work-with-vendor-family-mode.patch
 	patches.suse/x86-cpu-vfm-Update-arch-x86-include-asm-intel-family.h.patch
