--- a/series.conf
+++ b/series.conf
@@ -10291,6 +10291,7 @@
 	patches.suse/rt-Add-documentation-describing-what-RT-kernel-config-changes-to-default.patch
 	patches.suse/rt-Add-documentation-describing-what-kernel-debug-options-to-add-for-testing.patch
 	patches.suse/rt-Add-helper-script-to-refresh-RT-configs-based-on-the-parent.patch
+	patches.suse/dm-table-check-BLK_FEAT_ATOMIC_WRITES-inside-limits_.patch
 
 	########################################################
 	# You'd better have a good reason for adding a patch
