wifi: mac80211: Add link iteration macro for link data (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -32523,6 +32523,7 @@
 	patches.suse/usbnet-asix-AX88772-leave-the-carrier-control-to-phy.patch
 	patches.suse/netfilter-nft_set_pipapo-prevent-overflow-in-lookup-.patch
 	patches.suse/wifi-iwlwifi-Add-missing-MODULE_FIRMWARE-for-Qu-c0-j.patch
+	patches.suse/wifi-mac80211-Add-link-iteration-macro-for-link-data.patch
 	patches.suse/wifi-mac80211-VLAN-traffic-in-multicast-path.patch
 	patches.suse/wifi-ath12k-Pass-correct-values-of-center-freq1-and-.patch
 	patches.suse/wifi-ath12k-fix-incorrect-CE-addresses.patch
