ASoC: amd: yc: Add quirk for MSI Bravo 17 D7VF internal mic (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -32859,6 +32859,7 @@
 	patches.suse/ALSA-sb-Force-to-disable-DMAs-once-when-DMA-mode-is-.patch
 	patches.suse/ALSA-usb-audio-Rename-ALSA-kcontrol-PCM-and-PCM1-for.patch
 	patches.suse/ALSA-hda-realtek-enable-headset-mic-on-Latitude-5420.patch
+	patches.suse/ASoC-amd-yc-Add-quirk-for-MSI-Bravo-17-D7VF-internal.patch
 	patches.suse/gpio-mlxbf3-only-get-IRQ-for-device-instance-0.patch
 	patches.suse/scsi-elx-efct-Fix-memory-leak-in-efct_hw_parse_filter.patch
 	patches.suse/PCI-PM-Set-up-runtime-PM-even-for-devices-without-PC.patch
