--- a/series.conf
+++ b/series.conf
@@ -32863,6 +32863,7 @@
 	patches.suse/ASoC-amd-yc-update-quirk-data-for-HP-Victus.patch
 	patches.suse/gpio-mlxbf3-only-get-IRQ-for-device-instance-0.patch
 	patches.suse/scsi-elx-efct-Fix-memory-leak-in-efct_hw_parse_filter.patch
+	patches.suse/mtd-spinand-fix-memory-leak-of-ECC-engine-conf.patch
 	patches.suse/PCI-PM-Set-up-runtime-PM-even-for-devices-without-PC.patch
 	patches.suse/sunrpc-handle-SVC_GARBAGE-during-svc-auth-processing-as-auth-error.patch
 	patches.suse/dm-raid-fix-variable-in-journal-device-check.patch
