--- a/series.conf
+++ b/series.conf
@@ -32860,6 +32860,7 @@
 	patches.suse/ALSA-usb-audio-Rename-ALSA-kcontrol-PCM-and-PCM1-for.patch
 	patches.suse/ALSA-hda-realtek-enable-headset-mic-on-Latitude-5420.patch
 	patches.suse/ASoC-amd-yc-Add-quirk-for-MSI-Bravo-17-D7VF-internal.patch
+	patches.suse/ASoC-amd-yc-update-quirk-data-for-HP-Victus.patch
 	patches.suse/gpio-mlxbf3-only-get-IRQ-for-device-instance-0.patch
 	patches.suse/scsi-elx-efct-Fix-memory-leak-in-efct_hw_parse_filter.patch
 	patches.suse/PCI-PM-Set-up-runtime-PM-even-for-devices-without-PC.patch
