wifi: ath6kl: remove WARN on bad firmware input (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -32840,6 +32840,7 @@
 	patches.suse/calipso-Fix-null-ptr-deref-in-calipso_req_-set-del-a.patch
 	patches.suse/NFC-nci-uart-Set-tty-disc_data-only-in-success-path.patch
 	patches.suse/wifi-mac80211-drop-invalid-source-address-OCB-frames.patch
+	patches.suse/wifi-ath6kl-remove-WARN-on-bad-firmware-input.patch
 	patches.suse/wifi-carl9170-do-not-ping-device-which-has-failed-to.patch
 	patches.suse/drm-msm-disp-Correct-porch-timing-for-SDM845.patch
 	patches.suse/drm-msm-dsi-dsi_phy_10nm-Fix-missing-initial-VCO-rat.patch
