ata: pata_cs5536: fix build on 32-bit UML (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -32827,6 +32827,7 @@
 	patches.suse/platform-x86-dell_rbu-Stop-overwriting-data-buffer.patch
 	patches.suse/platform-x86-amd-pmc-Add-PCSpecialist-Lafite-Pro-V-1.patch
 	patches.suse/ata-pata_via-Force-PIO-for-ATAPI-devices-on-VT6415-V.patch
+	patches.suse/ata-pata_cs5536-fix-build-on-32-bit-UML.patch
 	patches.suse/cgroup-freezer-fix-incomplete-freezing-when-attaching-task.patch
 	patches.suse/hwmon-ftsteutates-Fix-TOCTOU-race-in-fts_read.patch
 	patches.suse/hwmon-occ-Rework-attribute-registration-for-stack-us.patch
