--- a/series.conf
+++ b/series.conf
@@ -32953,6 +32953,7 @@
 	patches.suse/Bluetooth-hci_sync-Fix-not-disabling-advertising-ins.patch
 	patches.suse/Bluetooth-hci_event-Fix-not-marking-Broadcast-Sink-B.patch
 	patches.suse/net-phy-smsc-Fix-Auto-MDIX-configuration-when-disabl.patch
+	patches.suse/net-phy-smsc-Fix-link-failure-in-forced-mode-with-Au.patch
 
 	########################################################
 	# end of sorted patches
