wifi: mac80211: chan: chandef is non-NULL for reserved (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -22705,6 +22705,7 @@
 	patches.suse/wifi-wfx-fix-memory-leak-when-starting-AP.patch
 	patches.suse/wifi-rtl8xxxu-update-rate-mask-per-sta.patch
 	patches.suse/wifi-mac80211-simplify-non-chanctx-drivers.patch
+	patches.suse/wifi-mac80211-chan-chandef-is-non-NULL-for-reserved.patch
 	patches.suse/wifi-iwlwifi-return-negative-EINVAL-instead-of-posit.patch
 	patches.suse/wifi-mac80211-update-beacon-counters-per-link-basis.patch
 	patches.suse/wifi-iwlwifi-add-HONOR-to-PPAG-approved-list.patch
