--- a/series.conf
+++ b/series.conf
@@ -32825,6 +32825,7 @@
 	patches.suse/platform-x86-amd-pmc-Clear-metrics-table-at-start-of.patch
 	patches.suse/platform-x86-dell_rbu-Fix-list-usage.patch
 	patches.suse/platform-x86-dell_rbu-Stop-overwriting-data-buffer.patch
+	patches.suse/platform-x86-amd-pmc-Add-PCSpecialist-Lafite-Pro-V-1.patch
 	patches.suse/ata-pata_via-Force-PIO-for-ATAPI-devices-on-VT6415-V.patch
 	patches.suse/cgroup-freezer-fix-incomplete-freezing-when-attaching-task.patch
 	patches.suse/hwmon-ftsteutates-Fix-TOCTOU-race-in-fts_read.patch
