drm/msm: Fix a fence leak in submit error path (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -32845,6 +32845,7 @@
 	patches.suse/regulator-fan53555-add-enable_time-support-and-soft-.patch
 	patches.suse/drm-msm-disp-Correct-porch-timing-for-SDM845.patch
 	patches.suse/drm-msm-dsi-dsi_phy_10nm-Fix-missing-initial-VCO-rat.patch
+	patches.suse/drm-msm-Fix-a-fence-leak-in-submit-error-path.patch
 	patches.suse/drm-i915-pmu-Fix-build-error-with-GCOV-and-AutoFDO-e.patch
 	patches.suse/drm-amdgpu-switch-job-hw_fence-to-amdgpu_fence.patch
 	patches.suse/drm-amdkfd-Fix-race-in-GWS-queue-scheduling.patch
