ALSA: sb: Don't allow changing the DMA mode during operations (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -32855,6 +32855,7 @@
 	patches.suse/drm-etnaviv-Protect-the-scheduler-s-pending-list-wit.patch
 	patches.suse/ALSA-hda-intel-Add-Thinkpad-E15-to-PM-deny-list.patch
 	patches.suse/ALSA-hda-realtek-Fix-built-in-mic-on-ASUS-VivoBook-X.patch
+	patches.suse/ALSA-sb-Don-t-allow-changing-the-DMA-mode-during-ope.patch
 	patches.suse/ALSA-usb-audio-Rename-ALSA-kcontrol-PCM-and-PCM1-for.patch
 	patches.suse/ALSA-hda-realtek-enable-headset-mic-on-Latitude-5420.patch
 	patches.suse/gpio-mlxbf3-only-get-IRQ-for-device-instance-0.patch
