Logitech C-270 even more broken (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -32922,6 +32922,7 @@
 	patches.suse/Input-xpad-support-Acer-NGR-200-Controller.patch
 	patches.suse/Input-iqs7222-explicitly-define-number-of-external-c.patch
 	patches.suse/usb-cdnsp-do-not-disable-slot-for-disabled-slot.patch
+	patches.suse/Logitech-C-270-even-more-broken.patch
 	patches.suse/usb-chipidea-udc-disconnect-reconnect-from-host-when.patch
 	patches.suse/usb-gadget-u_serial-Fix-race-condition-in-TTY-wakeup.patch
 	patches.suse/usb-xhci-Skip-xhci_reset-in-xhci_resume-if-xhci-is-b.patch
