Revert "drm/i915/gem: Allow EXEC_CAPTURE on recoverable contexts on DG1" (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -32718,6 +32718,7 @@
 	patches.suse/netfilter-nf_set_pipapo_avx2-fix-initial-map-fill.patch
 	patches.suse/PM-sleep-Fix-power.is_suspended-cleanup-for-direct-c.patch
 	patches.suse/drm-i915-gem-Allow-EXEC_CAPTURE-on-recoverable-conte.patch
+	patches.suse/Revert-drm-i915-gem-Allow-EXEC_CAPTURE-on-recoverabl.patch
 	patches.suse/drm-amdgpu-amdgpu_vram_mgr_new-Clamp-lpfn-to-total-v.patch
 	patches.suse/amd-amdkfd-fix-a-kfd_process-ref-leak.patch
 	patches.suse/drm-amd-display-Add-null-pointer-check-for-get_first.patch
