Bluetooth: hci_sync: Fix not disabling advertising instance (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -32950,6 +32950,7 @@
 	patches.suse/pwm-mediatek-Ensure-to-disable-clocks-in-error-path.patch
 	patches.suse/pinctrl-qcom-msm-mark-certain-pins-as-invalid-for-in.patch
 	patches.suse/pinctrl-amd-Clear-GPIO-debounce-for-suspend.patch
+	patches.suse/Bluetooth-hci_sync-Fix-not-disabling-advertising-ins.patch
 
 	########################################################
 	# end of sorted patches
