Bluetooth: hci_event: Fix not marking Broadcast Sink BIS as connected (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -32951,6 +32951,7 @@
 	patches.suse/pinctrl-qcom-msm-mark-certain-pins-as-invalid-for-in.patch
 	patches.suse/pinctrl-amd-Clear-GPIO-debounce-for-suspend.patch
 	patches.suse/Bluetooth-hci_sync-Fix-not-disabling-advertising-ins.patch
+	patches.suse/Bluetooth-hci_event-Fix-not-marking-Broadcast-Sink-B.patch
 
 	########################################################
 	# end of sorted patches
