--- a/series.conf
+++ b/series.conf
@@ -32856,6 +32856,7 @@
 	patches.suse/ALSA-hda-intel-Add-Thinkpad-E15-to-PM-deny-list.patch
 	patches.suse/ALSA-hda-realtek-Fix-built-in-mic-on-ASUS-VivoBook-X.patch
 	patches.suse/ALSA-sb-Don-t-allow-changing-the-DMA-mode-during-ope.patch
+	patches.suse/ALSA-sb-Force-to-disable-DMAs-once-when-DMA-mode-is-.patch
 	patches.suse/ALSA-usb-audio-Rename-ALSA-kcontrol-PCM-and-PCM1-for.patch
 	patches.suse/ALSA-hda-realtek-enable-headset-mic-on-Latitude-5420.patch
 	patches.suse/gpio-mlxbf3-only-get-IRQ-for-device-instance-0.patch
