- x86/CPU/AMD: Terminate the erratum_1386_microcode array (git-fixes).
- Refresh
  patches.suse/x86-cpu-Move-AMD-erratum-1386-table-over-to-x86_cpu_id.patch.

--- a/series.conf
+++ b/series.conf
@@ -49758,6 +49758,7 @@
 	patches.suse/tools-power-turbostat-Add-initial-support-for-GraniteRapids-D.patch
 	patches.suse/x86-mm-Carve-out-INVLPG-inline-asm-for-use-by-others.patch
 	patches.suse/x86-microcode-AMD-Flush-patch-buffer-mapping-after-applica.patch
+	patches.suse/x86-CPU-AMD-Terminate-the-erratum_1386_microcode-array.patch
 	patches.suse/ntp-Remove-invalid-cast-in-time-offset-math.patch
 	patches.suse/xfs-remove-unknown-compat-feature-check-in-superblock-write-validation.patch
 	patches.suse/quota-flush-quota_release_work-upon-quota-writeback.patch
