--- a/series.conf
+++ b/series.conf
@@ -50822,6 +50822,7 @@
 	patches.suse/platform-x86-int3472-Check-for-adev-NULL.patch
 	patches.suse/platform-x86-firmware_attributes_class-Move-include-.patch
 	patches.suse/platform-x86-firmware_attributes_class-Simplify-API.patch
+	patches.suse/platform-x86-think-lmi-Directly-use-firmware_attribu.patch
 	patches.suse/Input-allocate-keycode-for-phone-linking.patch
 	patches.suse/platform-x86-acer-wmi-Ignore-AC-events.patch
 	patches.suse/iommu-arm-smmu-Make-instance-lookup-robust
