--- a/series.conf
+++ b/series.conf
@@ -50820,6 +50820,7 @@
 	patches.suse/platform-x86-amd-hsmp-Add-support-for-HSMP-protocol-versio.patch
 	patches.suse/platform-x86-serdev_helpers-Check-for-serial_ctrl_ui.patch
 	patches.suse/platform-x86-int3472-Check-for-adev-NULL.patch
+	patches.suse/platform-x86-firmware_attributes_class-Move-include-.patch
 	patches.suse/Input-allocate-keycode-for-phone-linking.patch
 	patches.suse/platform-x86-acer-wmi-Ignore-AC-events.patch
 	patches.suse/iommu-arm-smmu-Make-instance-lookup-robust
