--- a/series.conf
+++ b/series.conf
@@ -53902,6 +53902,7 @@
 	patches.suse/Input-xpad-support-Acer-NGR-200-Controller.patch
 	patches.suse/Input-iqs7222-explicitly-define-number-of-external-c.patch
 	patches.suse/usb-cdnsp-do-not-disable-slot-for-disabled-slot.patch
+	patches.suse/usb-dwc3-Abort-suspend-on-soft-disconnect-failure.patch
 	patches.suse/Logitech-C-270-even-more-broken.patch
 	patches.suse/usb-chipidea-udc-disconnect-reconnect-from-host-when.patch
 	patches.suse/usb-gadget-u_serial-Fix-race-condition-in-TTY-wakeup.patch
