--- a/series.conf
+++ b/series.conf
@@ -50821,6 +50821,7 @@
 	patches.suse/platform-x86-serdev_helpers-Check-for-serial_ctrl_ui.patch
 	patches.suse/platform-x86-int3472-Check-for-adev-NULL.patch
 	patches.suse/platform-x86-firmware_attributes_class-Move-include-.patch
+	patches.suse/platform-x86-firmware_attributes_class-Simplify-API.patch
 	patches.suse/Input-allocate-keycode-for-phone-linking.patch
 	patches.suse/platform-x86-acer-wmi-Ignore-AC-events.patch
 	patches.suse/iommu-arm-smmu-Make-instance-lookup-robust
