drm/xe: Allow bo mapping on multiple ggtts (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -50578,6 +50578,7 @@
 	patches.suse/drm-bridge-it6505-fix-HDCP-encryption-when-R0-ready.patch
 	patches.suse/drm-bridge-it6505-fix-HDCP-CTS-compare-V-matching.patch
 	patches.suse/drm-bridge-it6505-fix-HDCP-CTS-KSV-list-wait-timer.patch
+	patches.suse/drm-xe-Allow-bo-mapping-on-multiple-ggtts.patch
 	patches.suse/drm-amd-pm-Fix-an-error-handling-path-in-vega10_enab.patch
 	patches.suse/drm-amd-display-Populate-chroma-prefetch-parameters-.patch
 	patches.suse/drm-amd-Add-Suspend-Hibernate-notification-callback-.patch
