--- a/series.conf
+++ b/series.conf
@@ -53854,6 +53854,7 @@
 	patches.suse/drm-xe-display-Add-check-for-alloc_ordered_workqueue.patch
 	patches.suse/drm-xe-Move-DSB-l2-flush-to-a-more-sensible-place.patch
 	patches.suse/drm-xe-move-DPT-l2-flush-to-a-more-sensible-place.patch
+	patches.suse/drm-xe-guc-Explicitly-exit-CT-safe-mode-on-unwind.patch
 	patches.suse/drm-xe-Process-deferred-GGTT-node-removals-on-device.patch
 	patches.suse/drm-bridge-ti-sn65dsi86-Add-HPD-for-DisplayPort-conn.patch
 	patches.suse/i2c-robotfuzz-osif-disable-zero-length-read-messages.patch
