--- a/blacklist.conf
+++ b/blacklist.conf
@@ -403,3 +403,4 @@ c9b19ea63036fc537a69265acea1b18dabd1cbd3 # fix a warning if CONFIG_NEED_DMA_MAP_
 37fb58a7273726e59f9429c89ade5116083a213d # CONFIG_CGROUP_FREEZER=n
 7129ea6e242b00938532537da41ddf5fa3e21471 # rust
 975776841e689dd8ba36df9fa72ac3eca3c2957a # only for CONFIG_SMP=n
+f9af88a3d384c8b55beb5dc5483e5da0135fadbd # kABI breakage
