--- a/series.conf
+++ b/series.conf
@@ -3899,6 +3899,7 @@
 	patches.suse/x86-sev-Mark-the-TSC-in-a-secure-TSC-guest-as-reliab.patch
 	patches.suse/x86-tsc-Init-the-TSC-for-Secure-TSC-guests.patch
 	patches.suse/x86-sev-Add-the-Secure-TSC-feature-for-SNP-guests.patch
+	patches.suse/x86-cpu-Introduce-new-microcode-matching-helper.patch
 	patches.suse/x86-cpu-Expose-only-stepping-min-max-interface.patch
 	patches.suse/x86-mtrr-Rename-mtrr_overwrite_state-to-guest_force_.patch
 	patches.suse/x86-amd_nb-Restrict-init-function-to-AMD-based-systems.patch
