x86/cpu: Replace PEBS use of 'x86_cpu_desc' use with 'x86_cpu_id' (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -3901,6 +3901,7 @@
 	patches.suse/x86-sev-Add-the-Secure-TSC-feature-for-SNP-guests.patch
 	patches.suse/x86-cpu-Introduce-new-microcode-matching-helper.patch
 	patches.suse/x86-cpu-Expose-only-stepping-min-max-interface.patch
+	patches.suse/x86-cpu-Replace-PEBS-use-of-x86_cpu_desc-use-with-x86_cpu_.patch
 	patches.suse/x86-mtrr-Rename-mtrr_overwrite_state-to-guest_force_.patch
 	patches.suse/x86-amd_nb-Restrict-init-function-to-AMD-based-systems.patch
 	patches.suse/x86-amd_nb-Clean-up-early_is_amd_nb.patch
