--- a/series.conf
+++ b/series.conf
@@ -3902,6 +3902,7 @@
 	patches.suse/x86-cpu-Introduce-new-microcode-matching-helper.patch
 	patches.suse/x86-cpu-Expose-only-stepping-min-max-interface.patch
 	patches.suse/x86-cpu-Replace-PEBS-use-of-x86_cpu_desc-use-with-x86_cpu_.patch
+	patches.suse/x86-cpu-Move-AMD-erratum-1386-table-over-to-x86_cpu_id.patch
 	patches.suse/x86-mtrr-Rename-mtrr_overwrite_state-to-guest_force_.patch
 	patches.suse/x86-amd_nb-Restrict-init-function-to-AMD-based-systems.patch
 	patches.suse/x86-amd_nb-Clean-up-early_is_amd_nb.patch
