x86/cpu: Avoid running off the end of an AMD erratum table (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -8067,6 +8067,7 @@
 	patches.suse/x86-bugs-Don-t-fill-RSB-on-VMEXIT-with-eIBRS-retpoline.patch
 	patches.suse/x86-bugs-Don-t-fill-RSB-on-context-switch-with-eIBRS.patch
 	patches.suse/x86-bugs-Add-RSB-mitigation-document.patch
+	patches.suse/x86-cpu-Avoid-running-off-the-end-of-an-AMD-erratum-table.patch
 	patches.suse/x86-ibt-Fix-hibernate.patch
 	patches.suse/irqchip-davinci-Remove-leftover-header.patch
 	patches.suse/drm-i915-Disable-RPG-during-live-selftest.patch
