kABI workaround for fw_attributes_class_get() (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -54460,6 +54460,7 @@
 	patches.kabi/kABI-fixes-for-struct-memory_block-changes.patch
 	patches.kabi/struct-cdns-move-new-member-to-the-end.patch
 	patches.kabi/kabi-restore-encap_sk-in-struct-xfrm_state.patch
+	patches.kabi/fw_attribute_class-kABI-workaround.patch
 
 	########################################################
 	# SLE15-SP3 OOT performance patches evaluated but left
