--- a/series.conf
+++ b/series.conf
@@ -9800,6 +9800,7 @@
 	patches.suse/mmc-core-sd-Apply-BROKEN_SD_DISCARD-quirk-earlier.patch
 	patches.suse/mtk-sd-Fix-a-pagefault-in-dma_unmap_sg-for-not-prepa.patch
 	patches.suse/mtk-sd-Prevent-memory-corruption-from-DMA-map-failur.patch
+	patches.suse/mmc-sdhci-Add-a-helper-function-for-dump-register-in.patch
 	patches.suse/Revert-mmc-sdhci-Disable-SD-card-clock-before-changi.patch
 	patches.suse/mtk-sd-reset-host-mrq-on-prepare_data-error.patch
 	patches.suse/net-usb-lan78xx-fix-WARN-in-__netif_napi_del_locked-.patch
