net: phy: smsc: Fix Auto-MDIX configuration when disabled by strap (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -9874,6 +9874,7 @@
 	patches.suse/pinctrl-amd-Clear-GPIO-debounce-for-suspend.patch
 	patches.suse/Bluetooth-hci_sync-Fix-not-disabling-advertising-ins.patch
 	patches.suse/Bluetooth-hci_event-Fix-not-marking-Broadcast-Sink-B.patch
+	patches.suse/net-phy-smsc-Fix-Auto-MDIX-configuration-when-disabl.patch
 
 	# out-of-tree patches
 	patches.suse/powerpc-pseries-dlpar-Search-DRC-index-from-ibm-drc-.patch
