--- a/series.conf
+++ b/series.conf
@@ -9738,6 +9738,7 @@
 	patches.suse/ALSA-usb-audio-Rename-ALSA-kcontrol-PCM-and-PCM1-for.patch
 	patches.suse/ALSA-hda-realtek-enable-headset-mic-on-Latitude-5420.patch
 	patches.suse/ALSA-hda-realtek-Add-quirk-for-Asus-GA605K.patch
+	patches.suse/ASoC-amd-yc-Add-quirk-for-MSI-Bravo-17-D7VF-internal.patch
 	patches.suse/ALSA-hda-realtek-Enable-headset-Mic-on-Positivo-P15X.patch
 	patches.suse/gpio-pca953x-fix-wrong-error-probe-return-value.patch
 	patches.suse/gpio-mlxbf3-only-get-IRQ-for-device-instance-0.patch
