--- a/series.conf
+++ b/series.conf
@@ -9706,6 +9706,7 @@
 	patches.suse/wifi-mac80211-drop-invalid-source-address-OCB-frames.patch
 	patches.suse/wifi-ath6kl-remove-WARN-on-bad-firmware-input.patch
 	patches.suse/wifi-carl9170-do-not-ping-device-which-has-failed-to.patch
+	patches.suse/regulator-fan53555-add-enable_time-support-and-soft-.patch
 	patches.suse/drm-msm-disp-Correct-porch-timing-for-SDM845.patch
 	patches.suse/drm-msm-dsi-dsi_phy_10nm-Fix-missing-initial-VCO-rat.patch
 	patches.suse/drm-msm-Fix-CP_RESET_CONTEXT_STATE-bitfield-names.patch
