--- a/series.conf
+++ b/series.conf
@@ -9733,6 +9733,7 @@
 	patches.suse/ALSA-hda-realtek-Add-mute-LED-support-for-HP-Victus-.patch
 	patches.suse/ALSA-hda-realtek-Fix-built-in-mic-on-ASUS-VivoBook-X.patch
 	patches.suse/ALSA-hda-realtek-Add-quirk-for-Asus-GU605C.patch
+	patches.suse/ALSA-sb-Don-t-allow-changing-the-DMA-mode-during-ope.patch
 	patches.suse/ALSA-usb-audio-Rename-ALSA-kcontrol-PCM-and-PCM1-for.patch
 	patches.suse/ALSA-hda-realtek-enable-headset-mic-on-Latitude-5420.patch
 	patches.suse/ALSA-hda-realtek-Add-quirk-for-Asus-GA605K.patch
