--- a/series.conf
+++ b/series.conf
@@ -9828,6 +9828,7 @@
 	patches.suse/Input-cs40l50-vibra-fix-potential-NULL-dereference-i.patch
 	patches.suse/usb-cdnsp-do-not-disable-slot-for-disabled-slot.patch
 	patches.suse/usb-dwc3-Abort-suspend-on-soft-disconnect-failure.patch
+	patches.suse/Logitech-C-270-even-more-broken.patch
 	patches.suse/usb-chipidea-udc-disconnect-reconnect-from-host-when.patch
 	patches.suse/Revert-usb-gadget-u_serial-Add-null-pointer-check-in.patch
 	patches.suse/usb-gadget-u_serial-Fix-race-condition-in-TTY-wakeup.patch
