ata: pata_cs5536: fix build on 32-bit UML (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -9684,6 +9684,7 @@
 	patches.suse/platform-x86-dell_rbu-Stop-overwriting-data-buffer.patch
 	patches.suse/platform-x86-amd-pmc-Add-PCSpecialist-Lafite-Pro-V-1.patch
 	patches.suse/ata-pata_via-Force-PIO-for-ATAPI-devices-on-VT6415-V.patch
+	patches.suse/ata-pata_cs5536-fix-build-on-32-bit-UML.patch
 	patches.suse/ata-ahci-Use-correct-BIOS-build-date-for-ThinkPad-W5.patch
 	patches.suse/ata-ahci-Disallow-LPM-for-ASUSPRO-D840SA-motherboard.patch
 	patches.suse/ata-ahci-Disallow-LPM-for-Asus-B550-F-motherboard.patch
