--- a/series.conf
+++ b/series.conf
@@ -1257,6 +1257,7 @@
 	patches.suse/drm-xe-pciids-separate-RPL-U-and-RPL-P-PCI-IDs.patch
 	patches.suse/drm-xe-pciids-separate-ARL-and-MTL-PCI-IDs.patch
 	patches.suse/drm-xe-Wire-up-device-shutdown-handler.patch
+	patches.suse/drm-xe-Fix-DSB-buffer-coherency.patch
 	patches.suse/drm-xe-pciids-Add-PVC-s-PCI-device-ID-macros.patch
 	patches.suse/drm-xe-pciid-Add-new-PCI-id-for-ARL.patch
 	patches.suse/drm-xe-devcoredump-Use-drm_puts-and-already-cached-l.patch
