--- a/series.conf
+++ b/series.conf
@@ -9709,6 +9709,7 @@
 	patches.suse/regulator-fan53555-add-enable_time-support-and-soft-.patch
 	patches.suse/drm-msm-disp-Correct-porch-timing-for-SDM845.patch
 	patches.suse/drm-msm-dsi-dsi_phy_10nm-Fix-missing-initial-VCO-rat.patch
+	patches.suse/drm-msm-Fix-a-fence-leak-in-submit-error-path.patch
 	patches.suse/drm-msm-Fix-CP_RESET_CONTEXT_STATE-bitfield-names.patch
 	patches.suse/drm-msm-a7xx-Call-CP_RESET_CONTEXT_STATE.patch
 	patches.suse/drm-i915-pmu-Fix-build-error-with-GCOV-and-AutoFDO-e.patch
