ACPI: thermal: Fix stale comment regarding trip points (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -6721,6 +6721,7 @@
 	patches.suse/msft-hv-3227-x86-hyperv-Add-comments-about-hv_vpset-and-var-size-.patch
 	patches.suse/msft-hv-3228-x86-hyperv-fix-an-indentation-issue-in-mshyperv.h.patch
 	patches.suse/PNP-Expand-length-of-fixup-id-string.patch
+	patches.suse/ACPI-thermal-Fix-stale-comment-regarding-trip-points.patch
 	patches.suse/ACPI-HED-Always-initialize-before-evged.patch
 	patches.suse/cpufreq-amd-pstate-Modify-the-min_perf-calculation-in-adjust_perf-callback.patch
 	patches.suse/cpufreq-amd-pstate-Remove-the-redundant-des_perf-clamping-in-adjust_perf.patch
