--- a/series.conf
+++ b/series.conf
@@ -9746,6 +9746,7 @@
 	patches.suse/scsi-elx-efct-Fix-memory-leak-in-efct_hw_parse_filter.patch
 	patches.suse/mtd-spinand-fix-memory-leak-of-ECC-engine-conf.patch
 	patches.suse/PCI-PM-Set-up-runtime-PM-even-for-devices-without-PC.patch
+	patches.suse/ACPICA-Refuse-to-evaluate-a-method-if-arguments-are-.patch
 	patches.suse/nfsd-use-threads-array-as-is-in-netlink-interface.patch
 	patches.suse/sunrpc-handle-SVC_GARBAGE-during-svc-auth-processing-as-auth-error.patch
 	patches.suse/spi-spi-cadence-quadspi-Fix-pm-runtime-unbalance.patch
