net: phy: smsc: Fix link failure in forced mode with Auto-MDIX (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -9876,6 +9876,7 @@
 	patches.suse/Bluetooth-hci_event-Fix-not-marking-Broadcast-Sink-B.patch
 	patches.suse/net-phy-smsc-Fix-Auto-MDIX-configuration-when-disabl.patch
 	patches.suse/net-phy-smsc-Force-predictable-MDI-X-state-on-LAN87x.patch
+	patches.suse/net-phy-smsc-Fix-link-failure-in-forced-mode-with-Au.patch
 
 	# out-of-tree patches
 	patches.suse/powerpc-pseries-dlpar-Search-DRC-index-from-ibm-drc-.patch
