--- a/series.conf
+++ b/series.conf
@@ -9811,6 +9811,7 @@
 	patches.suse/Bluetooth-HCI-Set-extended-advertising-data-synchron.patch
 	patches.suse/rose-fix-dangling-neighbour-pointers-in-rose_rt_devi.patch
 	patches.suse/drm-amdkfd-Don-t-call-mmput-from-MMU-notifier-callba.patch
+	patches.suse/dma-buf-fix-timeout-handling-in-dma_resv_wait_timeou.patch
 	patches.suse/drm-ttm-fix-error-handling-in-ttm_buffer_object_tran.patch
 	patches.suse/drm-bridge-panel-move-prepare_prev_first-handling-to.patch
 	patches.suse/drm-bridge-aux-hpd-bridge-fix-assignment-of-the-of_n.patch
