net: phy: smsc: Force predictable MDI-X state on LAN87xx (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -9875,6 +9875,7 @@
 	patches.suse/Bluetooth-hci_sync-Fix-not-disabling-advertising-ins.patch
 	patches.suse/Bluetooth-hci_event-Fix-not-marking-Broadcast-Sink-B.patch
 	patches.suse/net-phy-smsc-Fix-Auto-MDIX-configuration-when-disabl.patch
+	patches.suse/net-phy-smsc-Force-predictable-MDI-X-state-on-LAN87x.patch
 
 	# out-of-tree patches
 	patches.suse/powerpc-pseries-dlpar-Search-DRC-index-from-ibm-drc-.patch
