usb: xhci: quirk for data loss in ISOC transfers (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -9838,6 +9838,7 @@
 	patches.suse/usb-typec-altmodes-displayport-do-not-index-invalid-.patch
 	patches.suse/usb-typec-displayport-Fix-potential-deadlock.patch
 	patches.suse/usb-dwc3-gadget-Fix-TRB-reclaim-logic-for-short-tran.patch
+	patches.suse/usb-xhci-quirk-for-data-loss-in-ISOC-transfers.patch
 	patches.suse/xhci-Disable-stream-for-xHC-controller-with-XHCI_BRO.patch
 	patches.suse/xhci-dbctty-disable-ECHO-flag-by-default.patch
 	patches.suse/xhci-dbc-Flush-queued-requests-before-stopping-dbc.patch
