spinlock: extend guard with spinlock_bh variants (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -7503,6 +7503,7 @@
 	patches.suse/PCI-xilinx-cpm-Fix-IRQ-domain-leak-in-error-path-of-.patch
 	patches.suse/PCI-dwc-Use-resource-start-as-ioremap-input-in-dw_pc.patch
 	patches.suse/PCI-dwc-ep-Ensure-proper-iteration-over-outbound-map.patch
+	patches.suse/spinlock-extend-guard-with-spinlock_bh-variants.patch
 	patches.suse/lib-842-Improve-error-handling-in-sw842_compress.patch
 	patches.suse/crypto-ccp-Fix-check-for-the-primary-ASP-device.patch
 	patches.suse/crypto-ecdsa-Harden-against-integer-overflows-in-DIV.patch
