--- a/series.conf
+++ b/series.conf
@@ -9823,6 +9823,7 @@
 	patches.suse/drm-exynos-exynos7_drm_decon-add-vblank-check-in-IRQ.patch
 	patches.suse/drm-exynos-fimd-Guard-display-clock-control-with-run.patch
 	patches.suse/Input-xpad-adjust-error-handling-for-disconnect.patch
+	patches.suse/Input-xpad-support-Acer-NGR-200-Controller.patch
 	patches.suse/Input-iqs7222-explicitly-define-number-of-external-c.patch
 	patches.suse/Input-cs40l50-vibra-fix-potential-NULL-dereference-i.patch
 	patches.suse/usb-cdnsp-do-not-disable-slot-for-disabled-slot.patch
