crypto: iaa - Do not clobber req->base.data (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -8818,6 +8818,7 @@
 	patches.suse/erofs-fix-file-handle-encoding-for-64-bit-NIDs.patch
 	patches.suse/erofs-avoid-using-multiple-devices-with-different-type.patch
 	patches.suse/xfs-don-t-assume-perags-are-initialised-when-trimming-AGs.patch
+	patches.suse/crypto-iaa-Do-not-clobber-req-base.data.patch
 	patches.suse/crypto-qat-add-shutdown-handler-to-qat_4xxx.patch
 	patches.suse/crypto-qat-add-shutdown-handler-to-qat_420xx.patch
 	patches.suse/crypto-qat-remove-redundant-prototypes-in-qat_dh895x.patch
