--- a/series.conf
+++ b/series.conf
@@ -4662,6 +4662,7 @@
 	patches.suse/platform-x86-firmware_attributes_class-Simplify-API.patch
 	patches.suse/platform-x86-think-lmi-Directly-use-firmware_attribu.patch
 	patches.suse/platform-x86-hp-bioscfg-Directly-use-firmware_attrib.patch
+	patches.suse/platform-x86-dell-sysman-Directly-use-firmware_attri.patch
 	patches.suse/platform-x86-acer-wmi-Add-support-for-Acer-Predator-.patch
 	patches.suse/Input-allocate-keycode-for-phone-linking.patch
 	patches.suse/platform-x86-acer-wmi-add-support-for-Acer-Nitro-AN5.patch
