drm/xe: Replace double space with single space after comma (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -1253,6 +1253,7 @@
 	patches.suse/drm-vc4-Match-drm_dev_enter-and-exit-calls-in-vc4_hv-cf1c87d.patch
 	patches.suse/drm-vc4-Match-drm_dev_enter-and-exit-calls-in-vc4_hv.patch
 	patches.suse/drm-vc4-Correct-generation-check-in-vc4_hvs_lut_load.patch
+	patches.suse/drm-xe-Replace-double-space-with-single-space-after-.patch
 	patches.suse/drm-xe-pciids-separate-RPL-U-and-RPL-P-PCI-IDs.patch
 	patches.suse/drm-xe-pciids-separate-ARL-and-MTL-PCI-IDs.patch
 	patches.suse/drm-xe-Wire-up-device-shutdown-handler.patch
