--- a/series.conf
+++ b/series.conf
@@ -4658,6 +4658,7 @@
 	patches.suse/platform-x86-int3472-Check-for-adev-NULL.patch
 	patches.suse/platform-x86-acer-wmi-Add-support-for-Acer-PH14-51.patch
 	patches.suse/platform-x86-amd-hsmp-Constify-struct-bin_attribute.patch
+	patches.suse/platform-x86-firmware_attributes_class-Move-include-.patch
 	patches.suse/platform-x86-acer-wmi-Add-support-for-Acer-Predator-.patch
 	patches.suse/Input-allocate-keycode-for-phone-linking.patch
 	patches.suse/platform-x86-acer-wmi-add-support-for-Acer-Nitro-AN5.patch
