platform/x86: think-lmi: Directly use firmware_attributes_class (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -4660,6 +4660,7 @@
 	patches.suse/platform-x86-amd-hsmp-Constify-struct-bin_attribute.patch
 	patches.suse/platform-x86-firmware_attributes_class-Move-include-.patch
 	patches.suse/platform-x86-firmware_attributes_class-Simplify-API.patch
+	patches.suse/platform-x86-think-lmi-Directly-use-firmware_attribu.patch
 	patches.suse/platform-x86-acer-wmi-Add-support-for-Acer-Predator-.patch
 	patches.suse/Input-allocate-keycode-for-phone-linking.patch
 	patches.suse/platform-x86-acer-wmi-add-support-for-Acer-Nitro-AN5.patch
