platform/x86/amd/pmc: Add PCSpecialist Lafite Pro V 14M to 8042 quirks list (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -9682,6 +9682,7 @@
 	patches.suse/platform-x86-amd-pmf-Prevent-amd_pmf_tee_deinit-from.patch
 	patches.suse/platform-x86-dell_rbu-Fix-list-usage.patch
 	patches.suse/platform-x86-dell_rbu-Stop-overwriting-data-buffer.patch
+	patches.suse/platform-x86-amd-pmc-Add-PCSpecialist-Lafite-Pro-V-1.patch
 	patches.suse/ata-pata_via-Force-PIO-for-ATAPI-devices-on-VT6415-V.patch
 	patches.suse/ata-ahci-Use-correct-BIOS-build-date-for-ThinkPad-W5.patch
 	patches.suse/ata-ahci-Disallow-LPM-for-ASUSPRO-D840SA-motherboard.patch
