- drm/xe/guc: Dead CT helper (stable-fixes). - Refresh   patches.suse/drm-xe-Fix-early-wedge-on-GuC-load-failure.patch.

--- a/series.conf
+++ b/series.conf
@@ -1264,6 +1264,7 @@
 	patches.suse/drm-xe-devcoredump-Improve-section-headings-and-add-.patch
 	patches.suse/drm-xe-devcoredump-Add-ASCII85-dump-helper-function.patch
 	patches.suse/drm-xe-guc-Copy-GuC-log-prior-to-dumping.patch
+	patches.suse/drm-xe-guc-Dead-CT-helper.patch
 	patches.suse/drm-xe-ptl-L3bank-mask-is-not-available-on-the-media.patch
 	patches.suse/drm-xe-xe3-Add-initial-set-of-workarounds.patch
 	patches.suse/drm-i915-color-Extract-intel_color_modeset.patch
