--- a/series.conf
+++ b/series.conf
@@ -6880,6 +6880,7 @@
 	patches.suse/ASoC-cs35l41-check-the-return-value-from-spi_setup.patch
 	patches.suse/ASoC-qcom-sm8250-explicitly-set-format-in-sm8250_be_.patch
 	patches.suse/ASoC-amd-acp-Fix-for-enabling-DMIC-on-acp-platforms-.patch
+	patches.suse/ASoC-tas2764-Extend-driver-to-SN012776.patch
 	patches.suse/ASoC-sun4i-codec-support-hp-det-gpios-property.patch
 	patches.suse/ASoC-codecs-wcd937x-fix-a-potential-memory-leak-in-w.patch
 	patches.suse/ASoC-mediatek-mt6359-Add-stub-for-mt6359_accdet_enab.patch
