--- a/series.conf
+++ b/series.conf
@@ -9850,6 +9850,7 @@
 	patches.suse/platform-x86-think-lmi-Fix-class-device-unregistrati.patch
 	patches.suse/platform-x86-dell-wmi-sysman-Fix-class-device-unregi.patch
 	patches.suse/platform-mellanox-mlxreg-lc-Fix-logic-error-in-power.patch
+	patches.suse/platform-x86-think-lmi-Create-ksets-consecutively.patch
 	patches.suse/platform-x86-think-lmi-Fix-kobject-cleanup.patch
 	patches.suse/platform-x86-think-lmi-Fix-sysfs-group-cleanup.patch
 	patches.suse/spi-spi-fsl-dspi-Clear-completion-counter-before-ini.patch
