xfs: fix off-by-one error in fsmap's end_daddr usage (bsc#1235837).

--- a/series.conf
+++ b/series.conf
@@ -29893,6 +29893,7 @@
 	patches.suse/sound-usb-enable-DSD-output-for-ddHiFi-TC44C.patch
 	patches.suse/sound-usb-format-don-t-warn-that-raw-DSD-is-unsuppor.patch
 	patches.suse/ASoC-amd-yc-Fix-the-wrong-return-value.patch
+	patches.suse/xfs-fix-off-by-one-error-in-fsmap-s-end_daddr-usage.patch
 	patches.suse/xfs-fix-sb_spino_align-checks-for-large-fsblock-sizes.patch
 	patches.suse/xfs-return-from-xfs_symlink_verify-early-on-V4-filesystems.patch
 	patches.suse/acpi-nfit-vmalloc-out-of-bounds-Read-in-acpi_nfit_ct.patch
