drm/tegra: nvdec: Fix dma_alloc_coherent error check (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -32968,6 +32968,7 @@
 	patches.suse/net-phy-microchip-limit-100M-workaround-to-link-down.patch
 	patches.suse/can-m_can-m_can_handle_lost_msg-downgrade-msg-lost-i.patch
 	patches.suse/nbd-fix-uaf-in-nbd_genl_connect-error-path.patch
+	patches.suse/drm-tegra-nvdec-Fix-dma_alloc_coherent-error-check.patch
 
 	########################################################
 	# end of sorted patches
