--- a/series.conf
+++ b/series.conf
@@ -32963,6 +32963,7 @@
 	patches.suse/net-phy-smsc-Fix-link-failure-in-forced-mode-with-Au.patch
 	patches.suse/wifi-zd1211rw-Fix-potential-NULL-pointer-dereference.patch
 	patches.suse/wifi-mt76-mt7925-fix-the-wrong-config-for-tx-interru.patch
+	patches.suse/wifi-mt76-mt7925-fix-invalid-array-index-in-ssid-ass.patch
 
 	########################################################
 	# end of sorted patches
