wifi: zd1211rw: Fix potential NULL pointer dereference in zd_mac_tx_to_dev() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -32961,6 +32961,7 @@
 	patches.suse/Bluetooth-hci_event-Fix-not-marking-Broadcast-Sink-B.patch
 	patches.suse/net-phy-smsc-Fix-Auto-MDIX-configuration-when-disabl.patch
 	patches.suse/net-phy-smsc-Fix-link-failure-in-forced-mode-with-Au.patch
+	patches.suse/wifi-zd1211rw-Fix-potential-NULL-pointer-dereference.patch
 
 	########################################################
 	# end of sorted patches
