net: phy: microchip: limit 100M workaround to link-down events on LAN88xx (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -32965,6 +32965,7 @@
 	patches.suse/wifi-mt76-mt7925-fix-the-wrong-config-for-tx-interru.patch
 	patches.suse/wifi-mt76-mt7925-fix-invalid-array-index-in-ssid-ass.patch
 	patches.suse/wifi-mt76-mt7925-Fix-null-ptr-deref-in-mt7925_therma.patch
+	patches.suse/net-phy-microchip-limit-100M-workaround-to-link-down.patch
 
 	########################################################
 	# end of sorted patches
