--- a/series.conf
+++ b/series.conf
@@ -32964,6 +32964,7 @@
 	patches.suse/wifi-zd1211rw-Fix-potential-NULL-pointer-dereference.patch
 	patches.suse/wifi-mt76-mt7925-fix-the-wrong-config-for-tx-interru.patch
 	patches.suse/wifi-mt76-mt7925-fix-invalid-array-index-in-ssid-ass.patch
+	patches.suse/wifi-mt76-mt7925-Fix-null-ptr-deref-in-mt7925_therma.patch
 
 	########################################################
 	# end of sorted patches
