--- a/series.conf
+++ b/series.conf
@@ -32967,6 +32967,7 @@
 	patches.suse/wifi-mt76-mt7925-Fix-null-ptr-deref-in-mt7925_therma.patch
 	patches.suse/net-phy-microchip-limit-100M-workaround-to-link-down.patch
 	patches.suse/can-m_can-m_can_handle_lost_msg-downgrade-msg-lost-i.patch
+	patches.suse/nbd-fix-uaf-in-nbd_genl_connect-error-path.patch
 
 	########################################################
 	# end of sorted patches
