--- a/series.conf
+++ b/series.conf
@@ -53944,6 +53944,7 @@
 	patches.suse/drm-xe-Allocate-PF-queue-size-on-pow2-boundary.patch
 	patches.suse/Revert-drm-xe-xe2-Enable-Indirect-Ring-State-support.patch
 	patches.suse/drm-xe-bmg-fix-compressed-VRAM-handling.patch
+	patches.suse/drm-xe-pm-Correct-comment-of-xe_pm_set_vram_threshol.patch
 
 	########################################################
 	# end of sorted patches
