drm/xe/pf: Clear all LMTT pages on alloc (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -53940,6 +53940,7 @@
 	patches.suse/net-phy-smsc-Fix-Auto-MDIX-configuration-when-disabl.patch
 	patches.suse/net-phy-smsc-Fix-link-failure-in-forced-mode-with-Au.patch
 	patches.suse/wifi-mac80211-fix-non-transmitted-BSSID-profile-sear.patch
+	patches.suse/drm-xe-pf-Clear-all-LMTT-pages-on-alloc.patch
 
 	########################################################
 	# end of sorted patches
