drm/xe: Allocate PF queue size on pow2 boundary (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -53941,6 +53941,7 @@
 	patches.suse/net-phy-smsc-Fix-link-failure-in-forced-mode-with-Au.patch
 	patches.suse/wifi-mac80211-fix-non-transmitted-BSSID-profile-sear.patch
 	patches.suse/drm-xe-pf-Clear-all-LMTT-pages-on-alloc.patch
+	patches.suse/drm-xe-Allocate-PF-queue-size-on-pow2-boundary.patch
 
 	########################################################
 	# end of sorted patches
