wifi: mac80211: fix non-transmitted BSSID profile search (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -53939,6 +53939,7 @@
 	patches.suse/Bluetooth-hci_event-Fix-not-marking-Broadcast-Sink-B.patch
 	patches.suse/net-phy-smsc-Fix-Auto-MDIX-configuration-when-disabl.patch
 	patches.suse/net-phy-smsc-Fix-link-failure-in-forced-mode-with-Au.patch
+	patches.suse/wifi-mac80211-fix-non-transmitted-BSSID-profile-sear.patch
 
 	########################################################
 	# end of sorted patches
