Revert "drm/xe/xe2: Enable Indirect Ring State support for Xe2" (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -53942,6 +53942,7 @@
 	patches.suse/wifi-mac80211-fix-non-transmitted-BSSID-profile-sear.patch
 	patches.suse/drm-xe-pf-Clear-all-LMTT-pages-on-alloc.patch
 	patches.suse/drm-xe-Allocate-PF-queue-size-on-pow2-boundary.patch
+	patches.suse/Revert-drm-xe-xe2-Enable-Indirect-Ring-State-support.patch
 
 	########################################################
 	# end of sorted patches
