--- a/series.conf
+++ b/series.conf
@@ -53943,6 +53943,7 @@
 	patches.suse/drm-xe-pf-Clear-all-LMTT-pages-on-alloc.patch
 	patches.suse/drm-xe-Allocate-PF-queue-size-on-pow2-boundary.patch
 	patches.suse/Revert-drm-xe-xe2-Enable-Indirect-Ring-State-support.patch
+	patches.suse/drm-xe-bmg-fix-compressed-VRAM-handling.patch
 
 	########################################################
 	# end of sorted patches
