--- a/series.conf
+++ b/series.conf
@@ -53945,6 +53945,7 @@
 	patches.suse/Revert-drm-xe-xe2-Enable-Indirect-Ring-State-support.patch
 	patches.suse/drm-xe-bmg-fix-compressed-VRAM-handling.patch
 	patches.suse/drm-xe-pm-Correct-comment-of-xe_pm_set_vram_threshol.patch
+	patches.suse/drm-imagination-Fix-kernel-crash-when-hard-resetting.patch
 
 	########################################################
 	# end of sorted patches
