drm/tegra: nvdec: Fix dma_alloc_coherent error check (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -9919,6 +9919,7 @@
 	patches.suse/Revert-drm-xe-xe2-Enable-Indirect-Ring-State-support.patch
 	patches.suse/drm-xe-bmg-fix-compressed-VRAM-handling.patch
 	patches.suse/drm-xe-pm-Correct-comment-of-xe_pm_set_vram_threshol.patch
+	patches.suse/drm-tegra-nvdec-Fix-dma_alloc_coherent-error-check.patch
 
 	# out-of-tree patches
 	patches.suse/powerpc-pseries-dlpar-Search-DRC-index-from-ibm-drc-.patch
