can: m_can: m_can_handle_lost_msg(): downgrade msg lost in rx message to debug level (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -9912,6 +9912,7 @@
 	patches.suse/wifi-mt76-mt7925-Fix-null-ptr-deref-in-mt7925_therma.patch
 	patches.suse/net-phy-microchip-Use-genphy_soft_reset-to-purge-sta.patch
 	patches.suse/net-phy-microchip-limit-100M-workaround-to-link-down.patch
+	patches.suse/can-m_can-m_can_handle_lost_msg-downgrade-msg-lost-i.patch
 
 	# out-of-tree patches
 	patches.suse/powerpc-pseries-dlpar-Search-DRC-index-from-ibm-drc-.patch
