wifi: mwifiex: discard erroneous disassoc frames on STA interface (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -9904,6 +9904,7 @@
 	patches.suse/net-phy-smsc-Fix-link-failure-in-forced-mode-with-Au.patch
 	patches.suse/wifi-zd1211rw-Fix-potential-NULL-pointer-dereference.patch
 	patches.suse/wifi-mac80211-fix-non-transmitted-BSSID-profile-sear.patch
+	patches.suse/wifi-mwifiex-discard-erroneous-disassoc-frames-on-ST.patch
 
 	# out-of-tree patches
 	patches.suse/powerpc-pseries-dlpar-Search-DRC-index-from-ibm-drc-.patch
