net: phy: microchip: Use genphy_soft_reset() to purge stale LPA bits (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -9910,6 +9910,7 @@
 	patches.suse/wifi-mt76-mt7925-prevent-NULL-pointer-dereference-in.patch
 	patches.suse/wifi-mt76-mt7921-prevent-decap-offload-config-before.patch
 	patches.suse/wifi-mt76-mt7925-Fix-null-ptr-deref-in-mt7925_therma.patch
+	patches.suse/net-phy-microchip-Use-genphy_soft_reset-to-purge-sta.patch
 
 	# out-of-tree patches
 	patches.suse/powerpc-pseries-dlpar-Search-DRC-index-from-ibm-drc-.patch
