--- a/series.conf
+++ b/series.conf
@@ -9909,6 +9909,7 @@
 	patches.suse/wifi-mt76-mt7925-fix-invalid-array-index-in-ssid-ass.patch
 	patches.suse/wifi-mt76-mt7925-prevent-NULL-pointer-dereference-in.patch
 	patches.suse/wifi-mt76-mt7921-prevent-decap-offload-config-before.patch
+	patches.suse/wifi-mt76-mt7925-Fix-null-ptr-deref-in-mt7925_therma.patch
 
 	# out-of-tree patches
 	patches.suse/powerpc-pseries-dlpar-Search-DRC-index-from-ibm-drc-.patch
