--- a/series.conf
+++ b/series.conf
@@ -9913,6 +9913,7 @@
 	patches.suse/net-phy-microchip-Use-genphy_soft_reset-to-purge-sta.patch
 	patches.suse/net-phy-microchip-limit-100M-workaround-to-link-down.patch
 	patches.suse/can-m_can-m_can_handle_lost_msg-downgrade-msg-lost-i.patch
+	patches.suse/nbd-fix-uaf-in-nbd_genl_connect-error-path.patch
 
 	# out-of-tree patches
 	patches.suse/powerpc-pseries-dlpar-Search-DRC-index-from-ibm-drc-.patch
