--- a/series.conf
+++ b/series.conf
@@ -9920,6 +9920,7 @@
 	patches.suse/drm-xe-bmg-fix-compressed-VRAM-handling.patch
 	patches.suse/drm-xe-pm-Correct-comment-of-xe_pm_set_vram_threshol.patch
 	patches.suse/drm-tegra-nvdec-Fix-dma_alloc_coherent-error-check.patch
+	patches.suse/drm-imagination-Fix-kernel-crash-when-hard-resetting.patch
 
 	# out-of-tree patches
 	patches.suse/powerpc-pseries-dlpar-Search-DRC-index-from-ibm-drc-.patch
