wifi: mt76: mt7921: prevent decap offload config before STA initialization (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -9908,6 +9908,7 @@
 	patches.suse/wifi-mt76-mt7925-fix-the-wrong-config-for-tx-interru.patch
 	patches.suse/wifi-mt76-mt7925-fix-invalid-array-index-in-ssid-ass.patch
 	patches.suse/wifi-mt76-mt7925-prevent-NULL-pointer-dereference-in.patch
+	patches.suse/wifi-mt76-mt7921-prevent-decap-offload-config-before.patch
 
 	# out-of-tree patches
 	patches.suse/powerpc-pseries-dlpar-Search-DRC-index-from-ibm-drc-.patch
