Revert "drm/xe/xe2: Enable Indirect Ring State support for Xe2" (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -9916,6 +9916,7 @@
 	patches.suse/nbd-fix-uaf-in-nbd_genl_connect-error-path.patch
 	patches.suse/drm-xe-pf-Clear-all-LMTT-pages-on-alloc.patch
 	patches.suse/drm-xe-Allocate-PF-queue-size-on-pow2-boundary.patch
+	patches.suse/Revert-drm-xe-xe2-Enable-Indirect-Ring-State-support.patch
 
 	# out-of-tree patches
 	patches.suse/powerpc-pseries-dlpar-Search-DRC-index-from-ibm-drc-.patch
