--- a/series.conf
+++ b/series.conf
@@ -9915,6 +9915,7 @@
 	patches.suse/can-m_can-m_can_handle_lost_msg-downgrade-msg-lost-i.patch
 	patches.suse/nbd-fix-uaf-in-nbd_genl_connect-error-path.patch
 	patches.suse/drm-xe-pf-Clear-all-LMTT-pages-on-alloc.patch
+	patches.suse/drm-xe-Allocate-PF-queue-size-on-pow2-boundary.patch
 
 	# out-of-tree patches
 	patches.suse/powerpc-pseries-dlpar-Search-DRC-index-from-ibm-drc-.patch
