--- a/series.conf
+++ b/series.conf
@@ -9907,6 +9907,7 @@
 	patches.suse/wifi-mwifiex-discard-erroneous-disassoc-frames-on-ST.patch
 	patches.suse/wifi-mt76-mt7925-fix-the-wrong-config-for-tx-interru.patch
 	patches.suse/wifi-mt76-mt7925-fix-invalid-array-index-in-ssid-ass.patch
+	patches.suse/wifi-mt76-mt7925-prevent-NULL-pointer-dereference-in.patch
 
 	# out-of-tree patches
 	patches.suse/powerpc-pseries-dlpar-Search-DRC-index-from-ibm-drc-.patch
