--- a/series.conf
+++ b/series.conf
@@ -32970,6 +32970,7 @@
 	patches.suse/nbd-fix-uaf-in-nbd_genl_connect-error-path.patch
 	patches.suse/drm-tegra-nvdec-Fix-dma_alloc_coherent-error-check.patch
 	patches.suse/maple_tree-fix-mt_destroy_walk-on-root-leaf-node.patch
+	patches.suse/kasan-remove-kasan_find_vm_area-to-prevent-possible-.patch
 
 	########################################################
 	# end of sorted patches
