kasan: avoid sleepable page allocation from atomic context (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -8796,6 +8796,7 @@
 	patches.suse/spi-spi-fsl-dspi-Reset-SR-flags-before-sending-a-new.patch
 	patches.suse/Input-xpad-add-more-controllers.patch
 	patches.suse/Input-synaptics-rmi-fix-crash-with-unsupported-versi.patch
+	patches.suse/kasan-avoid-sleepable-page-allocation-from-atomic-co.patch
 	patches.suse/mm-hugetlb-fix-kernel-NULL-pointer-dereference-when-replac.patch
 	patches.suse/brd-fix-aligned_sector-from-brd_do_discard.patch
 	patches.suse/brd-fix-discard-end-sector.patch
