kasan: remove kasan_find_vm_area() to prevent possible deadlock (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -9924,6 +9924,7 @@
 	patches.suse/drm-tegra-nvdec-Fix-dma_alloc_coherent-error-check.patch
 	patches.suse/drm-imagination-Fix-kernel-crash-when-hard-resetting.patch
 	patches.suse/maple_tree-fix-mt_destroy_walk-on-root-leaf-node.patch
+	patches.suse/kasan-remove-kasan_find_vm_area-to-prevent-possible-.patch
 
 	# out-of-tree patches
 	patches.suse/powerpc-pseries-dlpar-Search-DRC-index-from-ibm-drc-.patch
