selftests/bpf: Add tests for iter next method returning valid pointer (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -28161,6 +28161,7 @@
 	patches.suse/bpf-correctly-handle-malformed-BPF_CORE_TYPE_ID_LOCA.patch
 	patches.suse/selftests-bpf-test-for-malformed-BPF_CORE_TYPE_ID_LO.patch
 	patches.suse/bpf-Make-the-pointer-returned-by-iter-next-method-va.patch
+	patches.suse/selftests-bpf-Add-tests-for-iter-next-method-returni.patch
 	patches.suse/bpf-Fix-error-message-on-kfunc-arg-type-mismatch.patch
 	patches.suse/bpftool-Fix-undefined-behavior-in-qsort-NULL-0.patch
 	patches.suse/bpf-Fix-a-sdiv-overflow-issue.patch
