net/smc: Fix lookup of netdev by using ib_device_get_netdev() (git-fixes bsc#1246217).

--- a/series.conf
+++ b/series.conf
@@ -48400,6 +48400,7 @@
 	patches.suse/net-vertexcom-mse102x-Fix-possible-double-free-of-TX.patch
 	patches.suse/virtio_net-Add-hash_key_length-check.patch
 	patches.suse/net-arc-fix-the-device-for-dma_map_single-dma_unmap_.patch
+	patches.suse/net-smc-Fix-lookup-of-netdev-by-using-ib_device_get_netdev.patch
 	patches.suse/rxrpc-Fix-missing-locking-causing-hanging-calls.patch
 	patches.suse/net-smc-do-not-leave-a-dangling-sk-pointer-in-__smc_create.patch
 	patches.suse/drivers-net-ionic-add-missed-debugfs-cleanup-to-ioni.patch
