--- a/series.conf
+++ b/series.conf
@@ -8480,6 +8480,7 @@
 	patches.kernel.org/6.12.37-228-x86-microcode-AMD-Add-TSA-microcode-SHAs.patch
 	patches.kernel.org/6.12.37-229-x86-process-Move-the-buffer-clearing-before-M.patch
 	patches.kernel.org/6.12.37-230-Linux-6.12.37.patch
+	patches.kernel.org/6.12.38-001-x86-CPU-AMD-Properly-check-the-TSA-microcode.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
