--- a/series.conf
+++ b/series.conf
@@ -8481,6 +8481,7 @@
 	patches.kernel.org/6.12.37-229-x86-process-Move-the-buffer-clearing-before-M.patch
 	patches.kernel.org/6.12.37-230-Linux-6.12.37.patch
 	patches.kernel.org/6.12.38-001-x86-CPU-AMD-Properly-check-the-TSA-microcode.patch
+	patches.kernel.org/6.12.38-002-Linux-6.12.38.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
