md/md-bitmap: fix dm-raid max_write_behind setting (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -9614,6 +9614,7 @@
 	patches.suse/usb-misc-onboard_usb_dev-fix-build-warning-for-CONFI.patch
 	patches.suse/loop-add-file_start_write-and-file_end_write.patch
 	patches.suse/md-raid1-raid10-don-t-handle-IO-error-for-REQ_RAHEAD-and-R.patch
+	patches.suse/md-md-bitmap-fix-dm-raid-max_write_behind-setting.patch
 	patches.suse/block-flip-iter-directions-in-blk_rq_integrity_map_user.patch
 	patches.suse/nvme-fix-command-limits-status-code.patch
 	patches.suse/nvme-fix-implicit-bool-to-flags-conversion.patch
