--- a/series.conf
+++ b/series.conf
@@ -9755,6 +9755,7 @@
 	patches.suse/drm-xe-bmg-Update-Wa_16023588340.patch
 	patches.suse/drm-xe-Fix-memset-on-iomem.patch
 	patches.suse/drm-xe-Fix-early-wedge-on-GuC-load-failure.patch
+	patches.suse/aoe-clean-device-rq_list-in-aoedev_downdev.patch
 	patches.suse/ALSA-hda-intel-Add-Thinkpad-E15-to-PM-deny-list.patch
 	patches.suse/ALSA-hda-realtek-Add-mute-LED-support-for-HP-Victus-.patch
 	patches.suse/ALSA-hda-realtek-Fix-built-in-mic-on-ASUS-VivoBook-X.patch
