--- a/series.conf
+++ b/series.conf
@@ -9693,6 +9693,7 @@
 	patches.suse/drivers-rapidio-rio_cm.c-prevent-possible-heap-overw.patch
 	patches.suse/block-Clear-BIO_EMULATES_ZONE_APPEND-flag-on-BIO-completio.patch
 	patches.suse/block-don-t-use-submit_bio_noacct_nocheck-in-blk_zone_wplu.patch
+	patches.suse/block-use-plug-request-list-tail-for-one-shot-backmerge-at.patch
 	patches.suse/nvme-always-punt-polled-uring_cmd-end_io-work-to-tas.patch
 	patches.suse/pidfs-never-refuse-ppid-0-in-PIDFD_GET_INFO.patch
 	patches.suse/powerpc-eeh-Fix-missing-PE-bridge-reconfiguration-du.patch
