scsi: smartpqi: Add new PCI IDs (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -9349,6 +9349,7 @@
 	patches.suse/scsi-lpfc-Create-lpfc_vmid_info-sysfs-entry.patch
 	patches.suse/scsi-lpfc-Update-lpfc-version-to-14.4.0.9.patch
 	patches.suse/scsi-lpfc-Copyright-updates-for-14.4.0.9-patches.patch
+	patches.suse/scsi-smartpqi-Add-new-PCI-IDs.patch
 	patches.suse/scsi-smartpqi-Fix-smp_processor_id-call-trace-for-preempti.patch
 	patches.suse/scsi-dc395x-Remove-leftover-if-statement-in-reselect.patch
 	patches.suse/pinctrl-mcp23s08-Reset-all-pins-to-input-at-probe.patch
