--- a/series.conf
+++ b/series.conf
@@ -9839,6 +9839,7 @@
 	patches.suse/Bluetooth-MGMT-mesh_send-check-instances-prior-disab.patch
 	patches.suse/Bluetooth-HCI-Set-extended-advertising-data-synchron.patch
 	patches.suse/rose-fix-dangling-neighbour-pointers-in-rose_rt_devi.patch
+	patches.suse/scsi-qla2xxx-Fix-DMA-mapping-test-in-qla24xx_get_port_data.patch
 	patches.suse/drm-amdkfd-Don-t-call-mmput-from-MMU-notifier-callba.patch
 	patches.suse/dma-buf-fix-timeout-handling-in-dma_resv_wait_timeou.patch
 	patches.suse/drm-ttm-fix-error-handling-in-ttm_buffer_object_tran.patch
