scsi: core: Enforce unlimited max_segment_size when virt_boundary_mask is set (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -9842,6 +9842,7 @@
 	patches.suse/scsi-qla2xxx-Fix-DMA-mapping-test-in-qla24xx_get_port_data.patch
 	patches.suse/scsi-qla4xxx-Fix-missing-DMA-mapping-error-in-qla4xxx_allo.patch
 	patches.suse/scsi-sd-Fix-VPD-page-0xb7-length-check.patch
+	patches.suse/scsi-core-Enforce-unlimited-max_segment_size-when-virt_bou.patch
 	patches.suse/drm-amdkfd-Don-t-call-mmput-from-MMU-notifier-callba.patch
 	patches.suse/dma-buf-fix-timeout-handling-in-dma_resv_wait_timeou.patch
 	patches.suse/drm-ttm-fix-error-handling-in-ttm_buffer_object_tran.patch
