--- a/series.conf
+++ b/series.conf
@@ -9777,6 +9777,7 @@
 	patches.suse/nfsd-use-threads-array-as-is-in-netlink-interface.patch
 	patches.suse/sunrpc-handle-SVC_GARBAGE-during-svc-auth-processing-as-auth-error.patch
 	patches.suse/dm-raid-fix-variable-in-journal-device-check.patch
+	patches.suse/scsi-megaraid_sas-Fix-invalid-node-index.patch
 	patches.suse/spi-spi-cadence-quadspi-Fix-pm-runtime-unbalance.patch
 	patches.suse/msft-hv-3283-net-mana-Record-doorbell-physical-address-in-PF-mode.patch
 	patches.suse/Bluetooth-L2CAP-Fix-L2CAP-MTU-negotiation.patch
