bpf/selftests: Check errno when percpu map value size exceeds (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -28166,6 +28166,7 @@
 	patches.suse/bpf-Fix-error-message-on-kfunc-arg-type-mismatch.patch
 	patches.suse/bpftool-Fix-undefined-behavior-in-qsort-NULL-0.patch
 	patches.suse/bpf-Check-percpu-map-value-size-first.patch
+	patches.suse/bpf-selftests-Check-errno-when-percpu-map-value-size.patch
 	patches.suse/bpf-Fix-a-sdiv-overflow-issue.patch
 	patches.suse/selftests-bpf-Add-tests-for-sdiv-smod-overflow-cases.patch
 	patches.suse/bpf-Fix-bpf_strtol-and-bpf_strtoul-helpers-for-32bit.patch
