bpf: Fix memory leak in bpf_core_apply (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -28698,6 +28698,7 @@
 	patches.suse/bpf-Make-sure-internal-and-UAPI-bpf_redirect-flags-d.patch
 	patches.suse/bpf-devmap-provide-rxq-after-redirect.patch
 	patches.suse/bpf-selftests-send-packet-to-devmap-redirect-XDP.patch
+	patches.suse/bpf-Fix-memory-leak-in-bpf_core_apply.patch
 	patches.suse/bpf-Fix-truncation-bug-in-coerce_reg_to_size_sx.patch
 	patches.suse/selftests-bpf-Add-test-for-truncation-after-sign-ext.patch
 	patches.suse/selftests-bpf-Add-test-for-sign-extension-in-coerce_.patch
