--- a/series.conf
+++ b/series.conf
@@ -54313,6 +54313,7 @@
 	patches.suse/0007-nvme-tcp-request-secure-channel-concatenation.patch
 	patches.suse/0008-nvme-fabrics-reset-admin-connection-for-secure-conca.patch
 	patches.suse/0009-nvmet-tcp-support-secure-channel-concatenation.patch
+	patches.suse/crypto-hkdf-skip-TVs-with-unapproved-salt-lengths-in.patch
 
 	# bsc#1236897 - honor isolcpus
 	patches.suse/lib-group_cpus-let-group_cpu_evenly-return-number.patch
