crypto: hkdf - skip TVs with unapproved salt lengths in FIPS mode (bsc#1241200 bsc#1246134).

--- a/series.conf
+++ b/series.conf
@@ -10127,6 +10127,7 @@
 	patches.suse/0009-ima-invalidate-unsupported-PCR-banks-only-once.patch
 	patches.suse/restore-tpm_pcr_extend-kabi.patch
 	patches.suse/KEYS-trusted-don-t-fail-module-__init-if-SHA1-is-una.patch
+	patches.suse/crypto-hkdf-skip-TVs-with-unapproved-salt-lengths-in.patch
 
 	# NIAP PP_OS bsc#1177353, bsc#1179076, bsc#1213270
 	patches.suse/0001-X.509-Add-CodeSigning-extended-key-usage-parsing.patch
