sched_ext: fix application of sizeof to pointer (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -3410,6 +3410,7 @@
 	patches.suse/nvmet-loop-avoid-using-mutex-in-IO-hotpath.patch
 	patches.suse/nvme-tcp-remove-nvme_tcp_destroy_io_queues.patch
 	patches.suse/workqueue-Do-not-warn-when-cancelling-WQ_MEM_RECLAIM-work-from-WQ_MEM_RECLAIM-worker.patch
+	patches.suse/sched_ext-fix-application-of-sizeof-to-pointer.patch
 	patches.suse/sched_ext-initialize-kit-cursor.flags.patch
 	patches.suse/clk-thead-Fix-TH1520-emmc-and-shdci-clock-rate.patch
 	patches.suse/clk-clk-imx8mp-audiomix-fix-function-signature.patch
