scsi: lpfc: Skip RSCN processing when FC_UNLOADING flag is set (bsc#1245260 bsc#1243100 bsc#1246125).

--- a/series.conf
+++ b/series.conf
@@ -32978,6 +32978,7 @@
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
 	patches.suse/scsi-lpfc-Update-debugfs-trace-ring-initialization-m.patch
 	patches.suse/scsi-lpfc-Check-for-hdwq-null-ptr-when-cleaning-up-l.patch
+	patches.suse/scsi-lpfc-Skip-RSCN-processing-when-FC_UNLOADING-fla.patch
 
 	########################################################
 	# end of sorted patches
