scsi: lpfc: Update lpfc version to 14.4.0.10 (bsc#1245260 bsc#1243100 bsc#1246125).

--- a/series.conf
+++ b/series.conf
@@ -32986,6 +32986,7 @@
 	patches.suse/scsi-lpfc-Move-clearing-of-HBA_SETUP-flag-to-before-.patch
 	patches.suse/scsi-lpfc-Revise-CQ_CREATE_SET-mailbox-bitfield-defi.patch
 	patches.suse/scsi-lpfc-Modify-end-of-life-adapters-model-descript.patch
+	patches.suse/scsi-lpfc-Update-lpfc-version-to-14.4.0.10.patch
 
 	########################################################
 	# end of sorted patches
