scsi: lpfc: Revise logging format for failed CT MIB requests (bsc#1245260 bsc#1243100 bsc#1246125).

--- a/series.conf
+++ b/series.conf
@@ -32974,6 +32974,9 @@
 	patches.suse/maple_tree-fix-mt_destroy_walk-on-root-leaf-node.patch
 	patches.suse/kasan-remove-kasan_find_vm_area-to-prevent-possible-.patch
 
+	# mkp/scsi queue
+	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
+
 	########################################################
 	# end of sorted patches
 	########################################################
