--- a/series.conf
+++ b/series.conf
@@ -32980,6 +32980,7 @@
 	patches.suse/scsi-lpfc-Check-for-hdwq-null-ptr-when-cleaning-up-l.patch
 	patches.suse/scsi-lpfc-Skip-RSCN-processing-when-FC_UNLOADING-fla.patch
 	patches.suse/scsi-lpfc-Early-return-out-of-FDMI-cmpl-for-locally-.patch
+	patches.suse/scsi-lpfc-Simplify-error-handling-for-failed-lpfc_ge.patch
 
 	########################################################
 	# end of sorted patches
