--- a/series.conf
+++ b/series.conf
@@ -32981,6 +32981,7 @@
 	patches.suse/scsi-lpfc-Skip-RSCN-processing-when-FC_UNLOADING-fla.patch
 	patches.suse/scsi-lpfc-Early-return-out-of-FDMI-cmpl-for-locally-.patch
 	patches.suse/scsi-lpfc-Simplify-error-handling-for-failed-lpfc_ge.patch
+	patches.suse/scsi-lpfc-Relocate-clearing-initial-phba-flags-from-.patch
 
 	########################################################
 	# end of sorted patches
