scsi: lpfc: Update debugfs trace ring initialization messages (bsc#1245260 bsc#1243100 bsc#1246125).

--- a/series.conf
+++ b/series.conf
@@ -32976,6 +32976,7 @@
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
+	patches.suse/scsi-lpfc-Update-debugfs-trace-ring-initialization-m.patch
 
 	########################################################
 	# end of sorted patches
