scsi: lpfc: Revise CQ_CREATE_SET mailbox bitfield definitions (bsc#1245260 bsc#1243100 bsc#1246125).

--- a/series.conf
+++ b/series.conf
@@ -32984,6 +32984,7 @@
 	patches.suse/scsi-lpfc-Relocate-clearing-initial-phba-flags-from-.patch
 	patches.suse/scsi-lpfc-Ensure-HBA_SETUP-flag-is-used-only-for-SLI.patch
 	patches.suse/scsi-lpfc-Move-clearing-of-HBA_SETUP-flag-to-before-.patch
+	patches.suse/scsi-lpfc-Revise-CQ_CREATE_SET-mailbox-bitfield-defi.patch
 
 	########################################################
 	# end of sorted patches
