--- a/series.conf
+++ b/series.conf
@@ -32979,6 +32979,7 @@
 	patches.suse/scsi-lpfc-Update-debugfs-trace-ring-initialization-m.patch
 	patches.suse/scsi-lpfc-Check-for-hdwq-null-ptr-when-cleaning-up-l.patch
 	patches.suse/scsi-lpfc-Skip-RSCN-processing-when-FC_UNLOADING-fla.patch
+	patches.suse/scsi-lpfc-Early-return-out-of-FDMI-cmpl-for-locally-.patch
 
 	########################################################
 	# end of sorted patches
