--- a/series.conf
+++ b/series.conf
@@ -32982,6 +32982,7 @@
 	patches.suse/scsi-lpfc-Early-return-out-of-FDMI-cmpl-for-locally-.patch
 	patches.suse/scsi-lpfc-Simplify-error-handling-for-failed-lpfc_ge.patch
 	patches.suse/scsi-lpfc-Relocate-clearing-initial-phba-flags-from-.patch
+	patches.suse/scsi-lpfc-Ensure-HBA_SETUP-flag-is-used-only-for-SLI.patch
 
 	########################################################
 	# end of sorted patches
