scsi: lpfc: Move clearing of HBA_SETUP flag to before lpfc_sli4_queue_unset (bsc#1245260 bsc#1243100 bsc#1246125).

--- a/series.conf
+++ b/series.conf
@@ -32983,6 +32983,7 @@
 	patches.suse/scsi-lpfc-Simplify-error-handling-for-failed-lpfc_ge.patch
 	patches.suse/scsi-lpfc-Relocate-clearing-initial-phba-flags-from-.patch
 	patches.suse/scsi-lpfc-Ensure-HBA_SETUP-flag-is-used-only-for-SLI.patch
+	patches.suse/scsi-lpfc-Move-clearing-of-HBA_SETUP-flag-to-before-.patch
 
 	########################################################
 	# end of sorted patches
