blacklist.conf: irrelevant due to configs

--- a/blacklist.conf
+++ b/blacklist.conf
@@ -405,3 +405,4 @@ c9b19ea63036fc537a69265acea1b18dabd1cbd3 # fix a warning if CONFIG_NEED_DMA_MAP_
 975776841e689dd8ba36df9fa72ac3eca3c2957a # only for CONFIG_SMP=n
 f9af88a3d384c8b55beb5dc5483e5da0135fadbd # kABI breakage
 1156b5e8be98c97087f8971609c852e418daf03b # cleanup designed to break kABI
+907af7d6e0c8cf4086b1bc5218281b2ca09f130b # irrelevant in our configs
