--- a/series.conf
+++ b/series.conf
@@ -9913,6 +9913,7 @@
 	patches.suse/scsi-lpfc-Relocate-clearing-initial-phba-flags-from-.patch
 	patches.suse/scsi-lpfc-Ensure-HBA_SETUP-flag-is-used-only-for-SLI.patch
 	patches.suse/scsi-lpfc-Move-clearing-of-HBA_SETUP-flag-to-before-.patch
+	patches.suse/scsi-lpfc-Revise-CQ_CREATE_SET-mailbox-bitfield-defi.patch
 
 	# out-of-tree patches
 	patches.suse/powerpc-pseries-dlpar-Search-DRC-index-from-ibm-drc-.patch
