--- a/series.conf
+++ b/series.conf
@@ -9906,6 +9906,7 @@
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
 	patches.suse/scsi-lpfc-Update-debugfs-trace-ring-initialization-m.patch
+	patches.suse/scsi-lpfc-Check-for-hdwq-null-ptr-when-cleaning-up-l.patch
 
 	# out-of-tree patches
 	patches.suse/powerpc-pseries-dlpar-Search-DRC-index-from-ibm-drc-.patch
